force-app/main/default/objects/Transaction__c/fields/AccOwnerId__c.field-meta.xml
<CustomField>
    <fullName>AccOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of an account against which transaction is executed</description>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>