force-app/main/default/objects/Transaction__c/fields/Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Creation_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Creation Time</label>
    <type>DateTime</type>
</CustomField>