force-app/main/default/objects/Transaction__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose of the transaction</description>
    <label>Purpose</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>